--- a/configs/data_wrapper/qva_garmentcodedata_token_data_wrapper.yaml
+++ b/configs/data_wrapper/qva_garmentcodedata_token_data_wrapper.yaml
@@ -1,6 +1,6 @@
 _target_: data.data_wrappers.garment_image_data_wrapper.GarmentImageDataWrapper
 defaults:
-  - data_split: full_training_token
-  - dataset: qva_garment_token_dataset
+  - dataset: qva_garment_token_dataset_garmentcodedata
 
-collate_fn: data.data_wrappers.collate_fns.collate_fn_default
+collate_fn: data.data_wrappers.collate_fns.collate_fn_regression
+split_file: assets/data_configs/garmentcodedata_datasplit_overfit_smaller.json
