--- a/configs/experiment/experiment.yaml
+++ b/configs/experiment/experiment.yaml
@@ -1,7 +1,6 @@
 defaults:
   - wandb_info: wandb
-project_name: GPT2
+project_name: ???
 run_name: ???
 run_id: null
 local_dir: null
-is_training: True
