--- a/configs/experiment/wandb_info/wandb.yaml
+++ b/configs/experiment/wandb_info/wandb.yaml
@@ -1,2 +1,2 @@
-wandb_dir: /miele/george/garment/sewformer
-wandb_cache_dir: /miele/george/garment/sewformer/cache
+wandb_dir: ???
+wandb_cache_dir: ???
